Fixed footer navigation wrong font

--- a/src/static/less/site.less
+++ b/src/static/less/site.less
@@ -45,7 +45,8 @@
 body,
 button,
 .button,
-.top-bar-section ul li > a {
+.top-bar-section ul li > a,
+.footer ul li > a {
   font-family: "museo-sans", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-weight: 100;
 }
